--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,10 @@ ul li{
 	list-style: none;
 }
 
+h3 {
+	border-bottom: solid 1px black;
+}
+
 .listing label + input{
 	display: inline-block;
 }
@@ -23,9 +27,22 @@ ul li{
 #details label + select,
 #details label + textarea,
 #details label + input {
-	display: block;
+	
 	margin-bottom:1em;
 	width: 100%;
+}
+
+
+[type="radio"] + label,
+[type="checkbox"] + label {
+	padding:0 0 1em 1em;
+	display: inline-block;
+
+}
+
+fieldset {
+	border:none;
+	margin: 1em 0;
 }
 
 
