--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,20 @@
 }
 
 
+img {
+	max-width: 100%;
+}
+
+
+/*header .container {
+
+	background-image: url('../img/hotel.jpg');
+	height:600px;
+    background-size: cover;
+     background-position: center;
+    background-repeat: no-repeat;
+
+}	*/
 .container {
 	padding: 1em;
 }
@@ -23,8 +37,33 @@ legend {
 
 }
 
+.listing img {
+	display: block;
+
+}
+
+.listing div {
+	border: solid 1px #ccc;
+	border-radius: 5px;
+	margin-bottom: 1em;
+	padding: 1em;
+}
+
+.listing div:hover {
+	box-shadow: 10px 10px 5px #888888;
+}
+
 .listing label + input{
 	display: inline-block;
+}
+
+.listing  input {
+	vertical-align: top;
+}
+
+.listing label  span {
+	font-size: .75em;
+	display: block;
 }
 
 #submitter label + input,
@@ -49,7 +88,56 @@ fieldset {
 	margin: 1em 0;
 }
 
+legend {
+	margin-bottom:.5em;
+}
+
 legend span {
 	font-size:.5em;
 }
 
+[type="placeholder"]{
+	font-style: italic;
+}
+
+input [type="text"] {
+	border: 
+}
+
+input:focus,
+textarea:focus
+{
+	
+	background-color: #f3e6d3;
+	color:#1d333e;
+}
+
+#details,
+#submitter{
+	display: none;
+}
+
+
+
+
+/************************************************
+				Media Queries
+*************************************************/
+
+@media screen and (min-width:769px) {
+
+
+
+
+
+
+}
+
+@media screen and (min-width:1024px) {
+
+	
+
+
+
+	
+}
