--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@ h1 {
 	
 	
 	min-height: calc(100vh - 92px);
+	background-color: rgba(0, 0, 0, 0.5);
 }
 
 .current ~ div {
@@ -71,6 +72,30 @@ ul li{
 .deadline {
 	
 	display: none;
+}
+
+
+
+.submit {
+
+	width: 100%;
+	text-align: center;
+}
+
+[type="submit"] {
+	max-width:100%;
+	width:200px;
+	height:50px;
+	background-color:#1f1f21;
+	color:#fff;
+	font-size:1em;
+	margin:0 auto;
+
+}
+
+[type="submit"]:hover {
+	color:#1f1f21;
+	background-color:#eee;
 }
 
 /************* Base Styles ******************/
@@ -186,15 +211,19 @@ Company Info
 	display: block;
 }
 
-.companyInfo [type="text"], 
-textarea,
-.submitterInfo [type="text"],
-.submitterInfo [type="email"]
+ [type="text"], 
+ [type="email"],
+ textarea
  {
 	margin-bottom: 1em;
 	width: 100%;
-	max-width: calc(100vh - 1em);	
+	max-width: 100%;
 	padding: 10px;
+}
+
+[type="tel"],
+select {
+	margin-bottom: 1em;
 }
 
 [type="text"],
@@ -203,6 +232,10 @@ textarea,
 select 
 {
 	height:3em;
+}
+
+textarea {
+	height:100px;
 }
 
 
@@ -238,13 +271,34 @@ select
 	}
 
 
+	.companyInfo label,
+	.submitterInfo label {
+		float:left;
+		width:250px;
+	}
+
+
+	.serviceTerritory li label {
+		padding-right:10px;
+
+
+	}
+
+
+	[type="text"],
+	[type="email"],
+	textarea
+	 {
+		max-width: calc((100% - 250px) -  1em);	
+	}
+
 }
 
 @media  screen and (min-width: 1024px){
 
 
 	.container{
-		width: 80%;
+		width: 65%;
 
 	}
 
@@ -254,6 +308,16 @@ select
 
 	.deadline {
 		float:right;
+	}
+
+
+
+	.category-list li{
+
+		display: inline-block;
+		float:left;
+		width:33%;
+
 	}
 
 
